--- a/about.html
+++ b/about.html
@@ -7,14 +7,15 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
   <script src="script.js"></script>
+<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=Lilita+One&display=swap" rel="stylesheet">
 	
 <Title>     
 About | Jade Roberts Portfolio 
 </Title>  
 <style>
-<link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&family=Lilita+One&display=swap" rel="stylesheet">
+	
 body {
   /* Define the gradient */
   background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
@@ -144,8 +145,8 @@ body {
     </div>
   </div>
   <img class="Rectangle56" style="width: auto; height: auto; left: auto; top: 1948px; position: relative" src="https://via.placeholder.com/300x300" />
-  <div class="Shoutouts" style="left: 570px; top: 1819px; position: absolute; color: black; font-size: 64px; font-family: Josefin Sans; font-weight: 400; word-wrap: break-word">Shoutouts</div>
-  <div class="ProblemSolver" style="left: 557px; top: 767px; position: absolute; color: black; font-size: 64px; font-family: Josefin Sans; font-weight: 400; word-wrap: break-word">Problem-Solver</div>
+  <div class="Shoutouts" style="left: auto; top: 1819px; position: absolute; color: black; font-size: 64px; font-family: Josefin Sans; font-weight: 400; word-wrap: break-word">Shoutouts</div>
+  <div class="ProblemSolver" style="left: auto; top: 767px; position: absolute; color: black; font-size: 64px; font-family: Josefin Sans; font-weight: 400; word-wrap: break-word">Problem-Solver</div>
   <div class="Nouns" style="width: 1065px; height: 582.50px; left: 138px; top: 253px; position: absolute">
     <div class="Inquisitive" style="left: 0px; top: 160px; position: absolute; color: black; font-size: 64px; font-family: Josefin Sans; font-weight: 400; word-wrap: break-word">Inquisitive</div>
     <div class="Creative" style="left: 823px; top: 24px; position: absolute; color: black; font-size: 64px; font-family: Josefin Sans; font-weight: 400; word-wrap: break-word">Creative</div>
@@ -161,14 +162,14 @@ body {
   </div>
   <img class="Rectangle3" style="width: auto; height: auto; left: auto; top: 1096px; position: absolute; border-radius: 72px" src="images/headshot.jpg" />
   <div class="FindOutMoreButton" style="width: auto; height: auto; left: auto; top: 1460px; position: absolute">
-    <div class="Rectangle52" style="width: 305px; height: 73.09px; left: 0px; top: 0px; position: absolute; background: #080705; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 30px"></div>
-    <div class="Rectangle53" style="width: 294.64px; height: 73.09px; left: 5.18px; top: 6.91px; position: absolute; background: #DE4D86; border-radius: 30px"></div>
-    <div class="FindOutMore" style="width: 269px; height: 35px; left: 18px; top: 29px; position: absolute; text-align: center; color: black; font-size: 24px; font-family: Gudea; font-weight: 700; word-wrap: break-word">Find Out More</div>
+    <div class="Rectangle52" style="width:auto; height: 73.09px; left: auto; top: 0px; position: absolute; background: #080705; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 30px"></div>
+    <div class="Rectangle53" style="width: auto; height: 73.09px; left: auto; top: 6.91px; position: absolute; background: #DE4D86; border-radius: 30px"></div>
+    <div class="FindOutMore" style="width: 269px; height: 35px; left: auto; top: 29px; position: absolute; text-align: center; color: black; font-size: 24px; font-family: Gudea; font-weight: 700; word-wrap: break-word">Find Out More</div>
   </div>
   <div class="FindOutMoreButton" style="width: 305px; height: 80px; left: 869px; top: 1453px; position: absolute">
-    <div class="Rectangle52" style="width: 305px; height: 73.09px; left: 0px; top: 0px; position: absolute; background: #080705; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 30px"></div>
-    <div class="Rectangle53" style="width: 294.64px; height: 73.09px; left: 5.18px; top: 6.91px; position: absolute; background: #DE4D86; border-radius: 30px"></div>
-    <div class="FindOutMore" style="width: 269px; height: 35px; left: 18px; top: 29px; position: absolute; text-align: center; color: black; font-size: 24px; font-family: Gudea; font-weight: 700; word-wrap: break-word">CV Link</div>
+    <div class="Rectangle52" style="width: 305px; height: 73.09px; left:auto; top: 0px; position: absolute; background: #080705; box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25); border-radius: 30px"></div>
+    <div class="Rectangle53" style="width: 294.64px; height: 73.09px; left: auto; top: 6.91px; position: absolute; background: #DE4D86; border-radius: 30px"></div>
+    <div class="FindOutMore" style="width: 269px; height: 35px; left: auto; top: 29px; position: absolute; text-align: center; color: black; font-size: 24px; font-family: Gudea; font-weight: 700; word-wrap: break-word">CV Link</div>
   </div>
   <img class="Rectangle58" style="width: 300px; height: 300px; left: 570px; top: 1948px; position: absolute" src="https://via.placeholder.com/300x300" />
   <div class="JadeRobertsIsAnAvidIdeatorAndCreatorAJadeOfAllTradesWhoOftenFindsHerselfInTheUserExperienceDesignSpaceTransformingQualitativeDataIntoActionableDesignFromUxToSocialMediaAndVideoAssetCreation" style="width: 641px; left: 703px; top: 1148px; position: absolute; text-align: center; color: #080705; font-size: 32px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Jade Roberts is an avid ideator and creator. A Jade-of-all-trades who often finds herself in the user experience design space, transforming qualitative data into actionable design. From UX to social media and video asset creation.</div>
