--- a/about.html
+++ b/about.html
@@ -21,7 +21,7 @@ body {
   background-image: linear-gradient(180deg, #8ECAE6 0%, #219EBC 100%);
   
   /* Set the height to 100% to take the full view */
-  height: auto;
+  height: 100%;
   
   /* Set the margin to 0 to remove browser default margins */
   margin: 0;
