--- a/about.html
+++ b/about.html
@@ -31,8 +31,8 @@ body {
 }
 	
 </style>  
-</head> 
 
+</head> 
 <header>  
 <nav class="sticky">
 	<ul class="header">
@@ -55,7 +55,7 @@ body {
 	</ul>
 	</nav>
 </header>  
-  <body>
+  <body style="height: 100%">
   <div class="Bg" >
     <div class="Pattern" style="width: 402.04px; height: 318.90px; left: 196px; top: 559px; position: absolute">
       <div class="Ellipse5" style="width: 118px; height: 199.50px; left: 230.98px; top: 197.76px; position: absolute; transform: rotate(98deg); transform-origin: 0 0; background: linear-gradient(285deg, rgba(222, 77, 134, 0.50) 0%, rgba(142, 202, 230, 0.50) 100%)"></div>
