--- a/shorts.html
+++ b/shorts.html
@@ -6,6 +6,10 @@
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/gh/dixonandmoe/rellax@master/rellax.min.js"></script>
   <script src="script.js"></script>
+	  
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Gudea:ital,wght@0,400;0,700;1,400&display=swap');
+
 	
 <Title>     
 Home | Jade Roberts Portfolio 
@@ -13,6 +17,7 @@ Home | Jade Roberts Portfolio
 </head> 
 <Body style="
     height: 1000px";>   
+	
 <header>  
 <nav class="sticky">
 	<ul class="header">
