--- a/projects.html
+++ b/projects.html
@@ -58,9 +58,9 @@ Work | Jade Roberts Portfolio
   </div>
 
   <div class="Copy" style="width: 1440.01px; height: 79px; left: 0px; top: 2045px; position: absolute">
-    <div class="Line" style="width: 720.005px; height: 65px; left: 0px; top: 6px; position: absolute">
-      <div class="Line1" style="width: 720.005px; height: 0px; left: 0px; top: 42px; position: absolute; border: 12px #DE4D86 solid"></div>
-      <div class="Rectangle55" style="width: 884px; height: 65px; left: 284px; top: 0px; position: absolute; background: #FFF1DD"></div>
+    <div class="Line" style="width: auto; height: 65px; left: 0px; top: 6px; position: absolute">
+      <div class="Line1" style="width: auto; height: 0px; left: 0px; top: 42px; position: absolute; border: 12px #DE4D86 solid"></div>
+      <div class="Rectangle55" style="width: auto; height: 65px; left: 284px; top: 0px; position: absolute; background: #FFF1DD"></div>
     </div>
     <div class="CopywritingAndConversationDesign" style="width: 1281px; height: 79px; left: 79px; top: 0px; position: absolute; text-align: center; color: #080705; font-size: 48px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Copywriting and Conversation Design</div>
   </div>
@@ -70,11 +70,11 @@ Work | Jade Roberts Portfolio
     </div>
     <div class="GraphicDesignAndPromotionalAssets" style="width: 1281px; left: 87px; top: 5px; position: absolute; text-align: center; color: #080705; font-size: 48px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">Graphic Design and Promotional Assets</div>
   </div>
-  <div class="UxRD" style="width: 1440.01px; height: 149px; left: 0px; top: 1043px; position: absolute">
-    <div class="Line" style="width: 1440.01px; height: 85px; left: 0px; top: 24px; position: absolute">
-      <div class="Line1" style="width: 1440.01px; height: 0px; left: 0px; top: 62px; position: absolute; border: 12px #DE4D86 solid"></div>
+  <div class="UxRD" style="width: auto; height: 149px; left: 0px; top: 1043px; position: absolute">
+    <div class="Line" style="width: auto; height: 85px; left: 0px; top: 24px; position: absolute">
+      <div class="Line1" style="width: auto; height: 0px; left: 0px; top: 62px; position: absolute; border: 12px #DE4D86 solid"></div>
     </div>
-    <div class="UxResearchAndDesign" style="width: 1183px; height: 149px; left: 143px; top: 0px; position: absolute; text-align: center; color: #080705; font-size: 48px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">UX Research and Design</div>
+    <div class="UxResearchAndDesign" style="width: auto; height: 149px; left: 143px; top: 0px; position: absolute; text-align: center; color: #080705; font-size: 48px; font-family: Lilita One; font-weight: 400; word-wrap: break-word">UX Research and Design</div>
   </div>
   <div class="Frame7" style="padding-bottom: 4px; left: 80px; top: 2244px; position: absolute; border-radius: 10px; overflow: hidden; flex-direction: column; justify-content: flex-start; align-items: center; display: inline-flex">
     <img class="UsabilityTestingWithVoiceflow1" style="width: 983px; height: 590px" src="https://via.placeholder.com/983x590" />
